--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,7 @@
         android:allowBackup="true"
         android:label="@string/app_name"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme" >
+        android:theme="@style/MeshMix2" >
 
         <!-- Splash screen -->
         <activity
@@ -26,8 +26,7 @@
 
         <activity
             android:name=".MainActivity"
-            android:label="@string/app_name"
-            android:theme="@android:style/Theme.Material.Light" >
+            android:label="@string/app_name">
         </activity>
 
         // Needed for LoginActivity to work
