--- a/app/build.gradle
+++ b/app/build.gradle
@@ -39,4 +39,7 @@ dependencies {
     compile 'com.spotify.sdk:spotify-player:1.0.0-beta11@aar'
 
     compile 'com.android.volley:volley@jar'
+
+    compile 'com.squareup.okio:okio:1.6.0'
+    compile 'com.squareup.okhttp:okhttp:2.5.0'
 }
