--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -40,6 +40,9 @@
             android:name="com.google.android.gms.version"
             android:value="@integer/google_play_services_version" />
 
+        <receiver android:name=".AlarmReceiver"></receiver>
+        <service android:name=".AlarmService" />
+
     </application>
 
 </manifest>
