--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -31,7 +31,7 @@
         </activity>
 
         <receiver android:name=".NewstimeBroadcastReceiver"></receiver>
-        <service android:name=".NewstimeService" />
+        <service android:name=".NewstimeBackgroundService" />
 
     </application>
 
